# advent-of-code

./: .gitignore
2020/: CMakeLists.txt  add-day.sh  day-n.cpp.template  main.cpp
2020/src/: matrix.cpp  matrix.h  my_assert.h  utils.cpp  utils.h
2020/src/days/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  index.h
2021/src/org/jakehoward/aoc/: core.clj  day_10.clj  day_11.clj  day_4.clj  day_5.clj  day_6.clj  day_7.clj  day_8.clj  day_9.clj  utils.clj
2022/: deps.edn
2022/python/: .gitignore  README.md  make-day.sh  scratch.py
2022/python/days/: 1.py  14.py  15.py  2.py  3.py  hyperneutrino-2.py  template.py
2022/python/utils/: directions.py  grid.py  matrix.py  misc.py  read.py  test_grid.py  test_matrix.py  test_misc.py
2022/python/utils/viz/: viz_grid.py
2022/src/org/jakehoward/aoc/: core.clj  utils.clj
2022/src/org/jakehoward/aoc/days/: day_1.clj  day_10.clj  day_11.clj  day_11_pt2.clj  day_12.clj  day_13.clj  day_14.clj  day_16.clj  day_19.clj  day_2.clj  day_20.clj  day_20_pt2.clj  day_21.clj  day_22.clj  day_23.clj  day_3.clj  day_4.clj  day_5.clj  day_6.clj  day_7.clj  day_7_again.clj  day_8.clj  day_9.clj  day_9_ui.clj  day_n.clj
2023/: .gitignore  day-25-ex.dot  day-25.dot  day_n.clj  deps.edn  make_day.clj  viz-day-10.txt
2023/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
2023/cpp/src/: matrix.h  utils.cpp  utils.h
2023/cpp/src/days/: 12.cpp  17.cpp  17.h  21.cpp  index.h
2023/cpp/test/: 17.test.cpp
2023/python/days/: day_24.py
2023/python/utils/: misc.py  test_grid.py
2023/python/utils/viz/: viz_grid.py
2023/resources/: viz.js
2023/src/aoc/: day_01.clj  day_02.clj  day_03.clj  day_04.clj  day_05.clj  day_06.clj  day_07.clj  day_08.clj  day_09.clj  day_10.clj  day_11.clj  day_12.clj  day_13.clj  day_13_ptii.clj  day_14.clj  day_15.clj  day_16.clj  day_17.clj  day_18.clj  day_19.clj  day_21.clj  day_23.clj  day_24.clj  day_25.clj  dijkstra.clj  utils.clj  vis.clj  vis_a_star_example.clj
2024/cpp23/: CMakeLists.txt
2024/cpp23/days/: day_0.cpp  day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_6.cpp  day_template.cpp
2024/cpp23/include/utils/: misc.hpp  read.hpp
2024/python/: .gitignore  make-day.sh  xmas_score.txt
2024/python/animations/: README.md  explain_day_4.py  getting_started.py
2024/python/days/: 0.py  1.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_15_game.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_24_pt2.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  day_copy_21.py  template.py  test_day_2.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py
2024/python/utils/: directions.py  grid.py  misc.py  path_finding.py  prefix_trie.py  test_grid.py  test_path_finding.py  test_prefix_trie.py  test_read.py
2024/python/utils/viz/: viz_grid.py
2025/go/: README.md
2025/go/days/: day-01  day-01.go  day-01_test.go  go.mod
2025/go/days/day_01/: main.go
2025/go/days/day_02/: main.go  main_test.go
2025/go/days/day_03/: main.go  main_test.go
2025/go/days/day_04/: main.go  main_test.go
2025/go/utils/: utils.go  utils_test.go
2025/go/utils/grid/: grid.go  grid_test.go
